force-app/main/default/objects/VisualAntidote__Platform_Account__c/VisualAntidote__Platform_Account__c.object-meta.xml
<CustomObject>
    <label>Platform Account</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>