force-app/main/default/objects/VisualAntidote__Platform_Account__c/fields/VisualAntidote__Key__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Key__c</fullName>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>