force-app/main/default/objects/VisualAntidote__Platform_Account__c/fields/VisualAntidote__ProviderType__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__ProviderType__c</fullName>
    <label>ProviderType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FormstackDocuments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>