force-app/main/default/objects/VisualAntidote__Platform_Account__c/fields/VisualAntidote__Secret__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Secret__c</fullName>
    <label>Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>